# labs

./: pyproject.toml
Интеллектуальные технологии в промышленности полного цикла/: Лабораторная работа 1.ipynb  Лабораторная работа 2.ipynb  Лабораторная работа 5.ipynb  Лабораторная работа 8.ipynb  Лабораторная работа 9.ipynb
Интеллектуальные технологии в промышленности полного цикла/.ipynb_checkpoints/: Лабораторная работа 2-checkpoint.ipynb  Лабораторная работа 3-checkpoint.ipynb  Лабораторная работа 4-checkpoint.ipynb  Лабораторная работа 6-checkpoint.ipynb  Лабораторная работа 7-checkpoint.ipynb
Интеллектуальные технологии в промышленности полного цикла/data/: coeffs.csv  coeffs_3.csv  logistics_data_client.csv  logistics_data_client_real.csv  logistics_data_warehouse.csv  logistics_data_warehouse_real.csv  production_data.csv  quality_data.csv
Интеллектуальные технологии в промышленности полного цикла/data/.ipynb_checkpoints/: logistics_data_client-Copy1-checkpoint.csv  logistics_data_warehouse-checkpoint.csv
Интеллектуальные технологии в промышленности полного цикла/data/Вариант 3/: КАРТОФЕЛЬ (и общая таблица цен).xlsx
Композитный искусственный интеллект и генеративные технологии в промышленности/: Лабораторная работа 1.ipynb  Лабораторная работа 2.ipynb  Лабораторная работа 6.ipynb
Композитный искусственный интеллект и генеративные технологии в промышленности/.ipynb_checkpoints/: Лабораторная работа 3-checkpoint.ipynb  Лабораторная работа 4-checkpoint.ipynb  Лабораторная работа 5-checkpoint.ipynb
(+2 files in other folders)
