[tool.poetry]
name = "lab-works"
version = "0.1.0"
description = ""
authors = ["thypogean <thypogean@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
statsmodels = "^0.14.1"
pmdarima = "^2.0.4"
openpyxl = "^3.1.2"
seaborn = "^0.13.2"
deap = "^1.4.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
